chore: fix challenge modal height issues on iOS

--- a/packages/web/src/stylesheets/_modals.scss
+++ b/packages/web/src/stylesheets/_modals.scss
@@ -151,7 +151,7 @@
 }
 
 [data-mobile-popover],
-[role='dialog'] {
+[data-dialog-portal] {
   max-height: none;
   max-height: var(--ios-viewport-height, none);
 }
